--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProjectionActivity"></activity>
+        <activity android:name=".ListView"></activity>
+        <activity android:name=".LaunchScreenActivity" />
+        <activity android:name=".ProjectionActivity" />
         <activity android:name=".ChooserActivity" />
         <activity android:name=".SecondActivity" />
         <activity android:name=".MainActivity">
