--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,18 @@
     package="com.example.smartcyclev1">
 
     <application
-
         android:name=".SmartCycleApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProjectClassV2"></activity>
+        <activity android:name=".ProjectClassV2" />
         <activity android:name=".ListView" />
         <activity android:name=".LaunchScreenActivity" />
         <activity android:name=".ProjectionActivity" />
+
         <activity android:name=".ChooserActivity" />
         <activity android:name=".SecondActivity" />
         <activity android:name=".MainActivity">
